unreleased
==========

- higher PCM bit depth for apt-X HD (24-bit) and LDAC (32-bit)
- use rst2man (docutils) instead of pandoc to build man-pages

bluez-alsa v3.0.0 (2020-09-15)
==============================

- separate D-Bus paths for PCM sink and source (API breakage)
- store PCM sample physical width in the D-Bus format property
- list available and supported audio codecs via D-Bus API
- support for A2DP audio codec selection or reconfiguration
- fix SBC encoder bit-pool selection (support SBC XQ quality)
- allow to disable software volume scaling via D-Bus API
- great improvement to the PCM I/O plug-in (thanks to @borine)
- install bluez-alsa manual pages (optional, requires pandoc)
- bluealsa-aplay: list connected BT devices and available PCMs
- bluealsa-aplay: fix PCM corruption due to out-of-bounds read

bluez-alsa v2.1.0 (2020-01-25)
==============================

- support HSP/HFP headset mode (connect phone without oFono)
- optional integration with UPower for battery level reporting
- initial (HFP only) support for audio codec selection
- auto-detect BlueZ D-Bus service appearance/disappearance
- lots of improvements for SCO connection robustness
- route SCO data via transport interface in Broadcom chips
- lots of fixes for ALSA plug-ins and BlueALSA server

bluez-alsa v2.0.0 (2019-10-15)
==============================

- BlueALSA server as a D-Bus service with public API
- optional support for A2DP Sink and Source with MP3 codec
- optional support for A2DP Source with apt-X HD codec
- optional support for mSBC codec in HFP profile
- manage internal BlueALSA memory by reference counting
- lots of fixes for ALSA plug-ins and BlueALSA server

bluez-alsa v1.4.0 (2019-03-16)
==============================

- optional support for A2DP Source with LDAC codec
- optional support for HFP-AG and HFP-HF over oFono
- keep-alive timeout for closed A2DP connections
- volume update notification for connected ALSA mixers