@@ -55,7 +55,8 @@ AM_CFLAGS = \
 	@GIO2_CFLAGS@ \
 	@GLIB2_CFLAGS@ \
 	@LDAC_ABR_CFLAGS@ \
-	@LDAC_CFLAGS@ \
+	@LDAC_DEC_CFLAGS@ \
+	@LDAC_ENC_CFLAGS@ \
 	@LIBUNWIND_CFLAGS@ \
 	@MPG123_CFLAGS@ \
 	@SBC_CFLAGS@
@@ -68,7 +69,8 @@ LDADD = \
 	@GIO2_LIBS@ \
 	@GLIB2_LIBS@ \
 	@LDAC_ABR_LIBS@ \
-	@LDAC_LIBS@ \
+	@LDAC_DEC_LIBS@ \
+	@LDAC_ENC_LIBS@ \
 	@LIBUNWIND_LIBS@ \
 	@MP3LAME_LIBS@ \
 	@MPG123_LIBS@ \
