@@ -536,10 +536,17 @@ START_TEST(test_a2dp_ldac) {
 	t1->release = t2->release = test_transport_release_bt_a2dp;
 
 	if (aging_duration) {
+#if HAVE_LDAC_DECODE
+		t1->mtu_write = t2->mtu_read = RTP_HEADER_LEN + sizeof(rtp_media_header_t) + 990 + 6;
+		test_a2dp(t1, t2, a2dp_source_ldac, a2dp_sink_ldac);
+#endif
 	}
 	else {
-		t1->mtu_write = t2->mtu_read = RTP_HEADER_LEN + sizeof(rtp_media_header_t) + 679;
+		t1->mtu_write = t2->mtu_read = RTP_HEADER_LEN + sizeof(rtp_media_header_t) + 660 + 6;
 		test_a2dp(t1, t2, a2dp_source_ldac, test_io_thread_a2dp_dump_bt);
+#if HAVE_LDAC_DECODE
+		test_a2dp(t1, t2, test_io_thread_a2dp_dump_pcm, a2dp_sink_ldac);
+#endif
 	}
 
 } END_TEST
